[package]
name = "csci320_project6"
version = "0.4.0"
authors = ["ianwalker04 <WalkerIR@hendrix.edu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.30"
heapless = "0.8.0"
oorandom = "11.1.5"
pc-keyboard = "0.8.0"
pluggable_interrupt_os = "0.5.2"

[dependencies.num]
version = "0.4.0"
default-features = false

[dependencies.crossbeam]
version = "0.8"
default-features = false
